--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "type": "symfony-bundle",
     "description": "Symfony OpenUserbundle",
     "keywords": ["User management, OpenUserbundle"],
-    "homepage": "http://friendsofsymfony.github.com",
+    "homepage": "https://github.com/justin-amt/OpenUserBundle",
     "license": "MIT",
     "authors": [
         {
