--- a/Resources/config/routing.yml
+++ b/Resources/config/routing.yml
@@ -1,3 +1,3 @@
-SewolabsUserBundle_homepage:
+OpenUserBundle_homepage:
     pattern:  /hello/{name}
-    defaults: { _controller: SewolabsUserBundle:Default:index }
+    defaults: { _controller: OpenUserBundle:Default:index }
