--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "open/user-bundle",
     "type": "symfony-bundle",
-    "description": "Symfony OpenUserbundle",
+    "description": "OpenUserbundle based on Symfony2",
     "keywords": ["User management, OpenUserbundle"],
     "homepage": "https://github.com/justin-john/OpenUserBundle",
     "license": "MIT",
